tests/paczka1/small_fuzzy/27806246.err
Error in line 7: z11H6g S673 4,7
Error in line 13: bDbaYJ0GBo S938 57,3
Error in line 10: 2ZpUBJ6kN S228 69,1
